# AutoMLWhitebox

./: (Example_1) BasicUsageAndParams.ipynb  (Example_2) DatesAndStatModel.ipynb  (Example_3) AutoTyping.ipynb  .gitignore  LICENSE  MANIFEST.in  README.md  build_package.sh  parameters_info.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-target_demo.csv
autowoe/: __init__.py  config.py  config.yaml
autowoe/lib/: autowoe.py  logger.py  logging.py
autowoe/lib/cat_encoding/: cat_encoding.py
autowoe/lib/optimizer/: optimizer.py
autowoe/lib/pipelines/: pipeline_feature_special_values.py  pipeline_homotopy.py  pipeline_smallnans.py  pipeline_smallnans_back.py
autowoe/lib/report/: autowoe_report_template.html  report.py  report_en_v2.html  report_generator.py  shaptxt
autowoe/lib/report/utilities_images/: utilities_images.py
autowoe/lib/selectors/: composed_selector.py  l1.py  selector_first.py  selector_last.py  utils.py
autowoe/lib/selectors/gen_add_del_l1/: gen_add_del_l1.py
autowoe/lib/selectors/l1/: l1.py
autowoe/lib/selectors/pearson_selector/: composed_selector.py  pearson_selector.py
autowoe/lib/selectors/utilities/: utilities_sklearn.py
autowoe/lib/types_handler/: features_checkers_handlers.py  types_handler.py
autowoe/lib/utilities/: cv_split_f.py  eli5_permutation.py  refit.py  s3.py  sql.py  utilities.py  utils.py
autowoe/lib/woe/: woe.py
autowoe_test/: conftest.py
autowoe_test/lib/: test_optimizer.py
autowoe_test/lib/example_test/: example_test.py
autowoe_test/lib/pipelines/: test_pipeline_homotopy.py
autowoe_test/resources/: d1.csv  d2.csv  d3.csv  d4.csv  d5.csv
examples/: Tutorial_1__Basic_usage_and_params.ipynb  Tutorial_2__Dates_and_stat_model.ipynb  Tutorial_3__AutoTyping.ipynb  Tutorial_4__Regression_Task.ipynb  Tutorial_5__Marked_values.ipynb  Tutorial_6__EDA_AllFeats.ipynb
examples/AUTOWOE_REPORT_1/: autowoe_report.html
examples/AUTOWOE_REPORT_2/: autowoe_report.html
examples/AUTOWOE_REPORT_3/: autowoe_report.html  shap.js
examples/data/: regression_dataset.csv
