[tool.poetry]
name = "AutoWoE"
version = "1.2.5"
description = "Library for automatic interpretable model building (Whitebox AutoML)"
authors = ["Vakhrushev Anton <AGVakhrushev@sberbank.ru>"]
readme = "README.md"
homepage = "https://github.com/sberbank-ai-lab/AutoMLWhitebox"
repository = "https://github.com/sberbank-ai-lab/AutoMLWhitebox"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: Russian",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "*"
scipy = "*"
pandas = "*"
scikit-learn = "*"
lightgbm = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
joblib = "*"
pytz = "*"
pytest = "*"
jinja2 = "*"
matplotlib = "*"
seaborn = "*"
tqdm = "^4.62.3"
StrEnum = "^0.4.7"



[tool.poetry.dev-dependencies]
notebook = "^6.4.6"
black = "20.8b1"
pre-commit = "2.15.0"
mypy = "^0.910"
tox = "*"
darglint = "^1.8.1"
flake8-docstrings = "^1.6.0"
isort = "5.7.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''


[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true
